alignment fixed

--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ button:focus {
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
 .section_gap {
-  padding: 200px 0; }
+  padding: 20px 0; }
   @media (max-width: 1199px) {
     .section_gap {
       padding: 80px 0; } }
@@ -212,7 +212,7 @@ button:focus {
 /*---------------------------------------------------- */
 /*----------------------------------------------------*/
 .header_area {
-  position: absolute;
+  position: relative;
   width: 100%;
   z-index: 9999;
   background: #ffffff; }
