--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,6 +1,6 @@
 //header_area css
 .header_area {
-    position: absolute;
+    position: relative;
     width: 100%;
     z-index: 9999;
     background: #ffffff;
